shared-cluster/iac-kubernetes/workloads/argocd/overlays/dev_1/argocd-server-ingress.yaml
# THIS FILE IS MANAGED BY AUTOMATION!
# IF YOU WANT TO MAKE CHANGES, EDIT THE TEMPLATE AND RE-RUN THE AUTOMATION
# GO TO `iac-kubernetes/manifest_templates.ipynb` TO FIND THE AUTOMATION
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: argocd.dev.cloud.org.gc.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
